--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Details.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Ubicacion.NombreCompleto)
+            @Html.DisplayNameFor(model => model.Ubicacion)
         </dt>
 
         <dd>
@@ -33,14 +33,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.UMDNS)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Tipo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tipo)
         </dd>
 
         <dt>
@@ -72,10 +64,12 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Estado)
+            @Html.ValueFor(model => model.Estado)
         </dd>
     </dl>
     @Html.DisplayFor(model => model.InformacionComercial)
+
+    @Html.Partial("_MantenimientoEquipo", Model.HistorialDeMantenimientos)
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.EquipoId }) |
