--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
@@ -10,15 +10,18 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FechaCompra, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control date-picker", @value = Model.FechaCompra.ToString(" dd/MM/yyyy") } })
                 @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.PrecioCompra, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PrecioCompra, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-9">
+                <div class="input-group">
+                    <span class="input-group-addon">$</span>
+                    @Html.EditorFor(model => model.PrecioCompra, new { htmlAttributes = new { @class = "form-control", @style = "max-width: 247px;" }})
+                </div>
                 @Html.ValidationMessageFor(model => model.PrecioCompra, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -26,9 +29,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ValorRestante, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="input-group">
+                    <span class="input-group-addon">$</span>
+                        @Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control", @style = "max-width: 247px;" } })
+                </div>
                 @Html.ValidationMessageFor(model => model.ValorRestante, "", new { @class = "text-danger" })
-            </div>
+                </div>
         </div>
 
         <div class="form-group">
@@ -42,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FechaFinGarantia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaFinGarantia, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.FechaFinGarantia, new { htmlAttributes = new { @class = "form-control date-picker", @value = Model.FechaCompra.ToString(" dd/MM/yyyy") } })
                 @Html.ValidationMessageFor(model => model.FechaFinGarantia, "", new { @class = "text-danger" })
             </div>
         </div>
