--- a/EquiposTecnicosSN.Web/Views/Shared/_InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_InformacionComercial.cshtml
@@ -1,9 +1,8 @@
 ﻿@model EquiposTecnicosSN.Entities.InformacionComercial
 
-@using (Html.BeginForm()) 
-{
+
     
-    <div class="form-horizontal">
+    <div class="form-inline">
         <h4>InformacionComercial</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -70,8 +69,3 @@
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
