Solicitud de Usuarios y seed DB inicial

--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -21,16 +21,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Usuarios", "Index", "ApplicationUsers")</li>
+                    <li>@Html.ActionLink("Solicitudes de Ususario", "Index", "SolicitudesUsuarios")</li>
                     <li>@Html.ActionLink("Proveedores", "Index", "Proveedores")</li>
                     <li>@Html.ActionLink("Mantenimientos", "Index", "MantenimientosEquipo")</li>
                     <li>@Html.ActionLink("Info Comercial", "Index", "InformacionesComerciales")</li>
-                    <li>@Html.ActionLink("UsuariosTech", "Index", "UsuariosTecnicos")</li>
                     <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
                     <li>@Html.ActionLink("Equipos", "Index", "EquiposBase")</li>
                     <li>@Html.ActionLink("Equipos de Climatización", "Index", "EquiposClimatizacion")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
