--- a/EquiposTecnicosSN.Web/Views/SolicitudesUsuarios/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/SolicitudesUsuarios/Create.cshtml
@@ -1,18 +1,17 @@
-﻿@model EquiposTecnicosSN.Entities.UsuarioTecnico
+﻿@model EquiposTecnicosSN.Entities.SolicitudUsuario
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Solicitud de Usuario";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UsuarioTecnico</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -24,7 +23,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UbicacionId, "UbicacionId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UbicacionId, "Ubicación", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("UbicacionId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UbicacionId, "", new { @class = "text-danger" })
@@ -33,12 +32,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Enviar Solicitud" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
