Creacion de usuarios

--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Solicitudes de Ususario", "Index", "SolicitudesUsuarios")</li>
+                    <li>@Html.ActionLink("Solicitudes de Usuario", "Index", "SolicitudesUsuarios")</li>
                     <li>@Html.ActionLink("Proveedores", "Index", "Proveedores")</li>
                     <li>@Html.ActionLink("Mantenimientos", "Index", "MantenimientosEquipo")</li>
                     <li>@Html.ActionLink("Info Comercial", "Index", "InformacionesComerciales")</li>
