--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -12,32 +12,52 @@
     <div class="navbar">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle navbar-default navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+
+@if (Request.IsAuthenticated)
+{
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Solicitudes de Usuario", "Index", "SolicitudesUsuarios")</li>
-                    <li>@Html.ActionLink("Proveedores", "Index", "Proveedores")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Equipos <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Equipos de Climatización", "Index", "EquiposClimatizacion")</li>
+                            <li role="separator" class="divider"></li>
+                            <li>@Html.ActionLink("Todos los Equipos", "Index", "EquiposBase")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administración <span class="caret"></span></a>
+                        <ul class="dropdown-menu">                            
+                        <li>@Html.ActionLink("Proveedores", "Index", "Proveedores")</li>
+                        <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
+                        </ul>
+                    </li>
                     <li>@Html.ActionLink("Mantenimientos", "Index", "MantenimientosEquipo")</li>
                     <li>@Html.ActionLink("Info Comercial", "Index", "InformacionesComerciales")</li>
-                    <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
-                    <li>@Html.ActionLink("Equipos", "Index", "EquiposBase")</li>
-                    <li>@Html.ActionLink("Equipos de Climatización", "Index", "EquiposClimatizacion")</li>
+                    <li>
+                        <a href=@Url.Action("Index", "SolicitudesUsuarios")>
+                            Solicitudes de Usuario
+                            <span class="badge">@{ Html.RenderAction("SolicitudesCount", "SolicitudesUsuarios", null); }</span>
+                        </a>
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
+}
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Dirección Provincial de Gestión de Recursos Físicos</p>
         </footer>
     </div>
 
