--- a/EquiposTecnicosSN.Web/Views/MantenimientosEquipo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/MantenimientosEquipo/CreateForEquipo.cshtml
@@ -20,7 +20,7 @@
             <div class="col-md-10">
                 @Html.DropDownList("EquipoId", null, htmlAttributes: new { @class = "form-control", disabled = "disabled", @readonly = "readonly" })
                 @Html.ValidationMessageFor(model => model.EquipoId, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.EquipoId);
+                @Html.HiddenFor(model => model.EquipoId)
             </div>
         </div>
 
