--- a/EquiposTecnicosSN.Web/Views/MantenimientosEquipo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/MantenimientosEquipo/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Equipo.NombreCompleto)
+            @Html.DisplayNameFor(model => model.Equipo)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NumeroReferencia)
