--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
@@ -10,7 +10,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FechaCompra, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control date-picker", @value = Model.FechaCompra.ToString(" dd/MM/yyyy") } })
+                @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control date-picker" } })
                 @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FechaFinGarantia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaFinGarantia, new { htmlAttributes = new { @class = "form-control date-picker", @value = Model.FechaCompra.ToString(" dd/MM/yyyy") } })
+                @Html.EditorFor(model => model.FechaFinGarantia, new { htmlAttributes = new { @class = "form-control date-picker" } })
                 @Html.ValidationMessageFor(model => model.FechaFinGarantia, "", new { @class = "text-danger" })
             </div>
         </div>
