Ordenes de Trabajo v1

--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                         <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
                         </ul>
                     </li>
+                    <li>@Html.ActionLink("Ordenes de T.", "Index", "OrdenesDeTrabajo")</li>
                     <li>@Html.ActionLink("Mantenimientos", "Index", "MantenimientosEquipo")</li>
                     <li>@Html.ActionLink("Info Comercial", "Index", "InformacionesComerciales")</li>
                     <li>
