--- a/EquiposTecnicosSN.Web/Views/InformacionesComerciales/Delete.cshtml
+++ b/EquiposTecnicosSN.Web/Views/InformacionesComerciales/Delete.cshtml
@@ -1,96 +1,89 @@
 ﻿@model EquiposTecnicosSN.Entities.InformacionComercial
 
 @{
-    Layout = null;
+    ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>Delete</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>InformacionComercial</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Equipo.NombreCompleto)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Equipo.NombreCompleto)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Proveedor.Nombre)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Proveedor.Nombre)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.FechaCompra)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.FechaCompra)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.PrecioCompra)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.PrecioCompra)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.ValorRestante)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.ValorRestante)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.EsGrantiaContrato)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.EsGrantiaContrato)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.FechaFinGarantia)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.FechaFinGarantia)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.NotasGarantia)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.NotasGarantia)
-            </dd>
-    
-        </dl>
-    
-        @using (Html.BeginForm()) {
-            @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
-            </div>
-        }
-    </div>
-</body>
-</html>
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>InformacionComercial</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Equipo.NombreCompleto)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Equipo.NombreCompleto)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Proveedor.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Proveedor.Nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaCompra)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaCompra)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PrecioCompra)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PrecioCompra)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ValorRestante)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ValorRestante)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EsGrantiaContrato)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EsGrantiaContrato)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaFinGarantia)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaFinGarantia)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NotasGarantia)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NotasGarantia)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
