--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Details.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.MantenimientoEquipo.Descripcion)
+            @Html.DisplayNameFor(model => model.Mantenimiento.Descripcion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MantenimientoEquipo.Descripcion)
+            @Html.DisplayFor(model => model.Mantenimiento.Descripcion)
         </dd>
 
         <dt>
