--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.MantenimientoEquipo.Descripcion)
+            @Html.DisplayNameFor(model => model.Mantenimiento.Descripcion)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Proveedor.Nombre)
@@ -30,7 +30,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.MantenimientoEquipo.Descripcion)
+            @Html.DisplayFor(modelItem => item.Mantenimiento.Descripcion)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Proveedor.Nombre)
