--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/datepicker")
-    @Scripts.Render("~/bundles/autocomplete")
+    @Scripts.Render("~/bundles/myBundle")
     @RenderSection("scripts", required: false)
 
 </body>
