--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/CreateForEquipo.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>MantenimientoEquipo</h4>
+        <h4>Mantenimiento</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
