--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>MantenimientoEquipo</h4>
+    <h4>Mantenimiento</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -62,6 +62,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MantenimientoEquipoId }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.MantenimientoId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
