--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Edit.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Edit.cshtml
@@ -18,10 +18,10 @@
         @Html.HiddenFor(model => model.OrdenDeTrabajoId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MantenimientoEquipoId, "MantenimientoEquipoId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MantenimientoId, "MantenimientoId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("MantenimientoEquipoId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MantenimientoEquipoId, "", new { @class = "text-danger" })
+                @Html.DropDownList("MantenimientoId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.MantenimientoId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -55,6 +55,16 @@
             </div>
         </div>
     </div>
+
+    <h4>Gastos</h4>
+    @Html.ActionLink("Añadir Gasto", "AddGastoToOrden", null, new { id = "addGasto" })
+    <div id="tablaGastos">
+        @foreach (var gasto in Model.Gastos)
+        {
+            @Html.Partial("_AddGastoToOrden", gasto)
+        }
+    </div>
+
 }
 
 <div>
