--- a/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
@@ -1,55 +1,51 @@
 ﻿@model IEnumerable<EquiposTecnicosSN.Entities.Equipos.Equipo>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Equipos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Listado de @ViewBag.Title</div>
+            <div class="panel-body">
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NombreCompleto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UMDNS)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumeroSerie)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Modelo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumeroInventario)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Ubicacion)
-        </th>
-    </tr>
+                <table class="table table-striped table-hover table-responsive table-condensed">
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.NombreCompleto)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.UMDNS)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Estado)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Ubicacion)
+                        </th>
+                    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.NombreCompleto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UMDNS)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumeroSerie)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Modelo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumeroInventario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
-        </td>
-    </tr>
-}
-
-</table>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NombreCompleto)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.UMDNS)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Estado)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
