--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
@@ -1,71 +1,65 @@
 ﻿@model IEnumerable<EquiposTecnicosSN.Entities.Equipos.EquipoClimatizacion>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Equipos de Climatización";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-lg-12">
+        @Html.ActionLink("Nuevo", "Create", null, htmlAttributes: new { @type = "button", @class = "btn btn-primary" })
+    </div>
+</div>
+<hr />
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Listado de @ViewBag.Title</div>
+            <div class="panel-body">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table table-hover table-responsive table-condensed">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Ubicacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NombreCompleto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UMDNS)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumeroSerie)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Modelo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumeroInventario)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Estado)
-        </th>
-        <th></th>
-    </tr>
+                <table class="table table-hover table-responsive table-condensed table-striped">
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Ubicacion)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.NombreCompleto)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.UMDNS)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Estado)
+                        </th>
+                        <th></th>
+                    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NombreCompleto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UMDNS)
-        </td>
-        <th>
-            @Html.DisplayFor(modelItem => item.NumeroSerie)
-        </th>
-        <td>
-            @Html.DisplayFor(modelItem => item.Modelo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumeroInventario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Estado)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.EquipoId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.EquipoId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.EquipoId }) |
-            @Html.ActionLink("Crear Ticket", "CreateForEquipo", "Mantenimientos", new { idEquipo = item.EquipoId }, null)
-        </td>
-    </tr>
-}
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NombreCompleto)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.UMDNS)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Estado)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Editar", "Edit", new { id = item.EquipoId }) |
+                                @Html.ActionLink("Ver", "Details", new { id = item.EquipoId }) |
+                                @Html.ActionLink("Borrar", "Delete", new { id = item.EquipoId }) |
+                                @Html.ActionLink("Nuevo Ticket", "CreateForEquipo", "Mantenimientos", new { idEquipo = item.EquipoId }, null)
+                            </td>
+                        </tr>
+                    }
 
-</table>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
