--- a/EquiposTecnicosSN.Web/Views/Mantenimientos/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Mantenimientos/Index.cshtml
@@ -5,61 +5,73 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-lg-12">
+        @Html.ActionLink("Nuevo", "Create", null, htmlAttributes: new { @type = "button", @class = "btn btn-primary" })
+    </div>
+</div>
+<hr />
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Listado de @ViewBag.Title</div>
+            <div class="panel-body">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Equipo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumeroReferencia)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Estado)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaDeInicio)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaDeFin)
-        </th>
-        <th></th>
-    </tr>
+                <table class="table table-hover table-responsive table-condensed table-striped">
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Equipo)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.NumeroReferencia)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Estado)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Descripcion)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FechaDeInicio)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FechaDeFin)
+                        </th>
+                        <th></th>
+                    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Equipo.NombreCompleto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumeroReferencia)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Estado)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaDeInicio)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaDeFin)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MantenimientoId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MantenimientoId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MantenimientoId }) |
-            @Html.ActionLink("Ver Órdenes", "Index", "OrdenesDeTrabajo", new { id = item.MantenimientoId }, null)
-        </td>
-    </tr>
-}
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Equipo.NombreCompleto)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NumeroReferencia)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Estado)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Descripcion)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.FechaDeInicio)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.FechaDeFin)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Editar", "Edit", new { id = item.MantenimientoId }) |
+                                @Html.ActionLink("Ver", "Details", new { id = item.MantenimientoId }) |
+                                @Html.ActionLink("Borrar", "Delete", new { id = item.MantenimientoId }) |
+                                @Html.ActionLink("Ver Órdenes", "Index", "OrdenesDeTrabajo", new { id = item.MantenimientoId }, null)
+                            </td>
+                        </tr>
+                    }
 
-</table>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
