--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/Create.cshtml
@@ -1,75 +1,83 @@
 ﻿@model EquiposTecnicosSN.Entities.Mantenimientos.OrdenDeTrabajo
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Orden de Trabajo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="panel panel-default">
-    <div class="panel-heading">Create</div>
-    <div class="panel-body">
-
-
 @using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Nueva @ViewBag.Title</div>
+                <div class="panel-body">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-horizontal">
-        <h4>OrdenDeTrabajo</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Mantenimiento, "MantenimientoId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("MantenimientoId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MantenimientoId, "", new { @class = "text-danger" })
+                    <div class="row">
+                        <div class="col-md-6">
+                            @Html.AntiForgeryToken()
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Mantenimiento, "Mantenimiento", htmlAttributes: new { @class = "control-label" })
+                                @Html.DropDownList("MantenimientoId", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.MantenimientoId, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Diagnostico, htmlAttributes: new { @class = "control-label" })
+                                @Html.TextAreaFor(model => model.Diagnostico, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Diagnostico, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.ProveedorId, "Proveedor", htmlAttributes: new { @class = "control-label" })
+                                @Html.DropDownList("ProveedorId", null, "Ninguno", htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.ProveedorId, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Resolucion, htmlAttributes: new { @class = "control-label" })
+                                @Html.TextAreaFor(model => model.Resolucion, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Resolucion, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+
+                    <h3>Gastos</h3>
+                    <div class="row">
+                        <div class="col-md-12">
+                            @Html.ActionLink("Añadir Gasto", "AddGastoToOrden",null, new { @id = "addGasto", @class = "btn btn-default" })
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Concepto</th>
+                                        <th>Monto</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tablaGastos">
+                                    @foreach (var gasto in Model.Gastos)
+                                    {
+                                        <tr class="gastoRow">
+                                            @Html.Partial("_AddGastoToOrden", gasto)
+                                        </tr>
+                                    }
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Diagnostico, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Diagnostico, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Diagnostico, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Resolucion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Resolucion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Resolucion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProveedorId, "ProveedorId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ProveedorId", null, "Ninguno", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ProveedorId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-        <h4>Gastos</h4>
-     <div class="row">
-
-     </div>
-        @Html.ActionLink("Añadir Gasto", "AddGastoToOrden", null, new { id = "addGasto" })
-        <div id="tablaGastos">
-            @foreach(var gasto in Model.Gastos)    
-            {
-                Html.Partial("_AddGastoToOrden", gasto);
-            }            
-        </div>
-
-}
-    </div>
-</div>
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+                                    }
+                                    <div>
+                                        @Html.ActionLink("Volver", "Index")
+                                    </div>
