--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
@@ -1,72 +1,62 @@
 ﻿@model EquiposTecnicosSN.Entities.Comercial.InformacionComercial
 
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Información Comercial</div>
 
-        <h4>Informacion Comercial</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
-        @Html.HiddenFor(model => model.EquipoId)
+            <div class="panel-body">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.FechaCompra, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control date-picker" } })
-                @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PrecioCompra, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-9">
-                <div class="input-group">
-                    <span class="input-group-addon">$</span>
-                    @Html.EditorFor(model => model.PrecioCompra, new { htmlAttributes = new { @class = "form-control", @style = "max-width: 247px;" }})
+                @Html.HiddenFor(model => model.EquipoId)
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.FechaCompra, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control date-picker" } })
+                            @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.PrecioCompra, htmlAttributes: new { @class = "control-label" })
+                            <div class="input-group">
+                                <span class="input-group-addon">$</span>
+                                @Html.EditorFor(model => model.PrecioCompra, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+                            @Html.ValidationMessageFor(model => model.PrecioCompra, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.FechaFinGarantia, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.FechaFinGarantia, new { htmlAttributes = new { @class = "form-control date-picker" } })
+                            @Html.ValidationMessageFor(model => model.FechaFinGarantia, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.ProveedorId, "Proveedor", htmlAttributes: new { @class = "control-label" })
+                            @Html.DropDownList("ProveedorId", null, "Ninguno", htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.ProveedorId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.ValorRestante, htmlAttributes: new { @class = "control-label" })
+                            <div class="input-group">
+                                <span class="input-group-addon">$</span>
+                                @Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+                            @Html.ValidationMessageFor(model => model.ValorRestante, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.EsGrantiaContrato, htmlAttributes: new { @class = "control-label" })
+                            @Html.EnumDropDownListFor(model => model.EsGrantiaContrato, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.EsGrantiaContrato, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.NotasGarantia, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.NotasGarantia, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NotasGarantia, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                 </div>
-                @Html.ValidationMessageFor(model => model.PrecioCompra, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ValorRestante, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="input-group">
-                    <span class="input-group-addon">$</span>
-                        @Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control", @style = "max-width: 247px;" } })
-                </div>
-                @Html.ValidationMessageFor(model => model.ValorRestante, "", new { @class = "text-danger" })
-                </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.EsGrantiaContrato, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.EsGrantiaContrato, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.EsGrantiaContrato, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FechaFinGarantia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaFinGarantia, new { htmlAttributes = new { @class = "form-control date-picker" } })
-                @Html.ValidationMessageFor(model => model.FechaFinGarantia, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NotasGarantia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NotasGarantia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NotasGarantia, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProveedorId, "ProveedorId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ProveedorId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ProveedorId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
+    </div>
+</div>
