--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Equipos<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-medkit fa-fw"></i> Equipos<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     @Html.ActionLink("Equipos de Climatización", "Index", "EquiposClimatizacion")
@@ -83,21 +83,22 @@
 
     <div id="page-wrapper">
         <div class="container body-content">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">@ViewBag.Title</h1>
+                </div>
+            </div>
             @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; @DateTime.Now.Year - Dirección Provincial de Gestión de Recursos Físicos</p>
-            </footer>
         </div>
     </div>
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @*Scripts.Render("~/bundles/jqueryui")*@
-        @Scripts.Render("~/lib/bower_components")
-        @Scripts.Render("~/bundles/datepicker")
-        @Scripts.Render("~/bundles/myBundle")
-        @RenderSection("scripts", required: false)
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/bundles/jqueryui")
+@Scripts.Render("~/lib/bower_components")
+@Scripts.Render("~/bundles/datepicker")
+@Scripts.Render("~/bundles/myBundle")
+@RenderSection("scripts", required: false)
 
 </body>
 </html>
