--- a/EquiposTecnicosSN.Web/Views/SolicitudesUsuarios/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/SolicitudesUsuarios/Index.cshtml
@@ -5,37 +5,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@ViewBag.Title</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Listado de @ViewBag.Title</div>
+            <div class="panel-body">
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.UbicacionId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th></th>
-    </tr>
+                <table class="table table-hover table-responsive table-condensed table-striped">
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Email)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.UbicacionId)
+                        </th>
+                        <th></th>
+                    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @*Html.ActionLink("Edit", "Edit", new { id=item.SolicitudUsuarioId }) |
-    @Html.ActionLink("Details", "Details", new { id=item.SolicitudUsuarioId }) |*@
-            @Html.ActionLink("Borrar", "Delete", new { id=item.SolicitudUsuarioId }) |
-            @Html.ActionLink("Crear Usuario", "CreateUser", new { id = item.SolicitudUsuarioId })
-        </td>
-    </tr>
-}
-</table>
-
-@if (ViewBag.Message != null) {
-    @ViewBag.Message
-}
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Email)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Borrar", "Delete", new { id = item.SolicitudUsuarioId }) |
+                                @Html.ActionLink("Crear Usuario", "CreateUser", new { id = item.SolicitudUsuarioId })
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
