--- a/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposBase/Index.cshtml
@@ -40,7 +40,7 @@
                                 @Html.DisplayFor(modelItem => item.Estado)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
+                                @Html.DisplayFor(modelItem => item.Ubicacion.Nombre)
                             </td>
                         </tr>
                     }
