--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
@@ -40,7 +40,7 @@
                             {
                                 <tr>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Ubicacion.NombreCompleto)
+                                        @Html.DisplayFor(modelItem => item.Ubicacion.Nombre)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.NombreCompleto)
