--- a/EquiposTecnicosSN.Web/Views/Ubicaciones/Delete.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Ubicaciones/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model EquiposTecnicosSN.Entities.Otras.Ubicacion
+﻿@model EquiposTecnicosSN.Entities.Equipos.Info.Ubicacion
 
 @{
     ViewBag.Title = "Delete";
@@ -13,11 +13,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.NombreCompleto)
+            @Html.DisplayNameFor(model => model.Nombre)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.NombreCompleto)
+            @Html.DisplayFor(model => model.Nombre)
         </dd>
 
     </dl>
