--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
@@ -25,7 +25,7 @@
                                 @Html.DisplayFor(model => model.Ubicacion.Nombre)
                                 @if (Model.Traslados.Count != 0)
                                 {
-                                    <a href="#">Ver Traslados</a>
+                                    <a href="#" data-toggle="modal" data-target="#modalTrasladosEquipo" >Ver Traslados</a>
                                 }
                             </p>
                         </div>
