--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
@@ -46,12 +46,12 @@
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(model => model.EsGrantiaContrato, htmlAttributes: new { @class = "control-label" })
-                            @Html.EnumDropDownListFor(model => model.EsGrantiaContrato, htmlAttributes: new { @class = "form-control" })
+                            @Html.EnumDropDownListFor(model => model.EsGrantiaContrato, "Ninguna", htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.EsGrantiaContrato, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(model => model.Financiamiento, htmlAttributes: new { @class = "control-label" })
-                            @Html.EnumDropDownListFor(model => model.Financiamiento, htmlAttributes: new { @class = "form-control" })
+                            @Html.EnumDropDownListFor(model => model.Financiamiento, "Ninguno", htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Financiamiento, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
